--- a/app/src/main/res/layout/activity_customer_records.xml
+++ b/app/src/main/res/layout/activity_customer_records.xml
@@ -5,7 +5,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecordsActivity">
+    android:orientation="vertical"
+    tools:context=".CustomerRecords">
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        android:text="Delete"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button4"
+        android:text="Update"/>
+
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
