--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,7 +6,9 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
     android:orientation="vertical"
-    android:background="#EAC9C0"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:background="#000000"
     tools:showIn="@layout/activity_main"
     style="@style/parent.contentLayout">
 
@@ -24,12 +26,13 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp">
+            android:id="@+id/relative1"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="128dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
@@ -56,9 +59,10 @@
             android:layout_height="wrap_content"
             android:text="Customer Records"
             android:layout_centerHorizontal="true"
+            android:layout_marginBottom="2dp"
             android:layout_marginTop="2dp"
             android:id="@+id/records"
-            android:textColor="#000000"
+            android:textColor="#00a5ff"
             android:textSize="20sp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="10dp"/>
@@ -66,53 +70,6 @@
 
         </RelativeLayout>
         </android.support.v7.widget.CardView>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp">
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="128dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                app:cardCornerRadius="7dp"
-                app:cardPreventCornerOverlap="false"
-                app:cardBackgroundColor="#ffffff"
-                app:cardElevation="4dp"
-                android:orientation="horizontal"
-                android:minHeight="200dp"
-                android:layout_alignParentTop="true">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Edit and Delete Customer Records"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="2dp"
-                        android:id="@+id/delete"
-                        android:textColor="#000000"
-                        android:textSize="20sp"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginLeft="10dp"/>
-
-
-                </RelativeLayout>
-            </android.support.v7.widget.CardView>
         </RelativeLayout>
 
         <include layout="@layout/content_edit"/>
