--- a/app/src/main/res/drawable/login_shape.xml
+++ b/app/src/main/res/drawable/login_shape.xml
@@ -7,7 +7,7 @@
         android:topRightRadius="0dp"
         />
     <solid
-        android:color="#5D9CEC"
+        android:color="#4C9A2A"
         />
     <size
         android:width="182dp"
