--- a/app/src/main/res/layout/activity_delete.xml
+++ b/app/src/main/res/layout/activity_delete.xml
@@ -15,7 +15,8 @@
         android:layout_below="@id/customer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
+        android:textSize="20dp"
+        android:background="@drawable/login_button"
         android:textColor="#ffffff"
         android:text="delete"/>
 
