--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -21,7 +21,7 @@
         android:layout_below="@id/customer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
+        android:background="@drawable/login_button"
         android:textColor="#ffffff"
         android:text="Update"/>
 
