--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="whiteCardColor">#fff</color>
-    <color name="primaryTextColor">#00a5ff</color>
+    <color name="primaryTextColor">#4C9A2A</color>
     <color name="whiteTextColor">#fff</color>
     <color name="loginBkColor">#f0f0f0</color>
     <color name="contentTextColor">#020000</color>
